--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Foresee",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
+  "description": "Sails application to predict prices",
   "keywords": [],
   "dependencies": {
     "cheerio": "^0.19.0",
@@ -24,6 +24,7 @@
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.2",
+    "winston": "^1.0.1",
     "xmlhttprequest": "^1.7.0"
   },
   "scripts": {
