--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.2",
+    "sails-redis": "^0.10.4",
     "winston": "^1.0.1",
     "xmlhttprequest": "^1.7.0"
   },
