--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
-    "sails": "~0.11.0",
-    "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.11.2",
+    "sails": "^0.12.1",
+    "sails-disk": "^0.10.9",
     "sails-redis": "^0.10.7",
-    "winston": "^1.0.1",
-    "xmlhttprequest": "^1.7.0"
+    "winston": "^1.0.1"
   },
   "scripts": {
     "start": "node app.js",
