--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
-    "sails": "^0.12.1",
+    "sails": "^0.12.2",
     "sails-disk": "^0.10.9",
+    "sails-postgresql": "^0.12.1",
     "sails-redis": "^0.10.7",
     "winston": "^1.0.1"
   },
