--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "Sails application to predict prices",
   "keywords": [],
   "dependencies": {
-    "cheerio": "^0.19.0",
-    "ejs": "~0.8.4",
+    "ejs": "^0.8.8",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -19,13 +18,12 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
-    "include-all": "~0.1.3",
-    "rc": "~0.5.0",
-    "sails": "^0.12.2",
+    "include-all": "^0.1.6",
+    "rc": "^0.5.5",
+    "sails": "^0.12.3",
     "sails-disk": "^0.10.9",
     "sails-postgresql": "^0.12.1",
-    "sails-redis": "^0.10.7",
-    "winston": "^1.0.1"
+    "winston": "^1.1.2"
   },
   "scripts": {
     "start": "node app.js",
